--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,11 +11,14 @@ services:
         max-file: "10"
         max-size: "10m"
     ports:
-      - "8080:8080"
+      - "8111:8111"
     env_file:
       - .env
+
+    networks:
+      - "main_network"
     entrypoint: >
-      bash -c "uvicorn main:application --host 0.0.0.0 --port 8080"
+      bash -c "uvicorn main:application --host 0.0.0.0 --port 8111"
 
   redis:
     container_name: redis
@@ -27,8 +30,15 @@ services:
       options:
         max-file: "10"
         max-size: "10m"
+
+    networks:
+      - "main_network"
     volumes:
       - redis:/var/lib/redis/data
 
 volumes:
   redis:
+
+networks:
+    main_network:
+      external: true
